--- a/.env.keys
+++ b/.env.keys
@@ -4,4 +4,4 @@ TMDB_API_READ_ACCESS_TOKEN=
 TWILIO_SERVICE_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_ACCOUNT_SID=
-SQLITE_PATH=
+DATABASE_URL="sqlite:db/database.sqlite3"
